# SuperCenter

./: .gitignore  .mcp.json  CLAUDE.md
docs/: BACKEND_DEV.md  FRONTEND_DEV.md  SPEC.md  commands.md  frontend-structure.md
docs/plans/: 2026-04-02-user-auth-and-blog-system.md  2026-04-03-backend-optimization.md  2026-04-03-frontend-optimization.md  2026-04-04-blog-optimization-plan.md  2026-04-04-blog-optimization.md  admin-config-system.md  loading-component-refactor.md
sc-backend/: .gitignore  CLAUDE.md  README.md  pyproject.toml  sc.py
sc-backend/app/: config.py  database.py  main.py
sc-backend/app/middleware/: __init__.py  auth.py
sc-backend/app/models/: __init__.py  blog.py  comment.py  system.py  user.py
sc-backend/app/routers/: __init__.py  admin.py  api.py  auth.py  blogs.py  comments.py  upload.py  users.py
sc-backend/app/schemas/: __init__.py  blog.py  comment.py  system.py  user.py
sc-backend/scripts/: migrate_add_category.py  migrate_add_is_deleted.py  migrate_add_subtitle.py  migrate_add_view_count.py  migrate_comment_soft_delete.py  seed_db.py
sc-frontend/: CLAUDE.md  README.md  package-lock.json  package.json
sc-frontend/src/app/: globals.css  layout.tsx  page.tsx
sc-frontend/src/components/: BlogCard.tsx  Card.tsx  ConfirmDialog.tsx  EmptyState.tsx  ErrorBoundary.tsx  FloatingAvatar.tsx  GradientText.tsx  Loading.tsx  Navbar.tsx  PageHeader.tsx  ProjectCard.tsx  Providers.tsx  Toast.tsx
sc-frontend/src/contexts/: AuthContext.tsx  SystemConfigContext.tsx
sc-frontend/src/services/: api.ts
sc-frontend/src/types/: index.ts
(+13 files in other folders)
