[project]
name = "sc-api"
version = "0.1.0"
description = "SuperCenter API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["data*"]
